add: remark-mathjax for math formula

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.26",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
