--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.41",
-    "gatsby-cli": "^2.12.87",
+    "gatsby": "^3.6.1",
+    "gatsby-cli": "^2.12.36",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-offline": "^3.2.23",
@@ -26,6 +26,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.0",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -39,7 +40,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
